--- a/source/Makefile
+++ b/source/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-I
 msh:
-        gcc -std=c99 -o msh ./msh.c -lncurses -lmenu
+        gcc -std=c99 -o ../bin/msh ./msh.c -lncurses -lmenu
 
 clean:
-        rm ./msh
+        rm ../bin/msh
